--- a/examples/mongo/package.json
+++ b/examples/mongo/package.json
@@ -29,8 +29,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-form-builder2": "^0.8.7",
-    "react-draft-wysiwyg": "1.13.2"
+    "react-form-builder2": "^0.8.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
