--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.8.4",
+    "draftjs-to-html": "^0.9.1",
     "es6-promise": "^4.2.8",
     "fbemitter": "^3.0.0",
     "immutability-helper": "^3.1.1",
@@ -49,7 +49,7 @@
     "react-datepicker": "^3.4.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-draft-wysiwyg": "~1.13.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-textarea-autosize": "^7.1.2",
