--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "start": "webpack-dev-server --hot --inline --mode development",
     "serve:api": "node server/index.js",
     "pretranspile": "rimraf lib",
-    "transpile": "babel --out-dir lib src --copy-files"
+    "transpile": "babel --out-dir lib src --copy-files",
+    "prepare": "npm run build"
   }
 }
