--- a/package.json
+++ b/package.json
@@ -106,6 +106,6 @@
     "serve:api": "node server/index.js",
     "pretranspile": "rimraf lib",
     "transpile": "babel --out-dir lib src --copy-files",
-    "prepare": "npm run build:dist && npm run build:style && npm run build"
+    "prepare": "npm run build:dist && npm run build:style"
   }
 }
