--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-textarea-autosize": "^7.1.2",
-    "xss": "^1.0.8"
+    "xss": "^1.0.8",
+    "jquery": "^3.5.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
