--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@santiliaudat/react-form-builder",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -30,13 +30,14 @@
   "dependencies": {
     "beedle": "^0.8.1",
     "classnames": "^2.2.6",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.25.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "es6-promise": "^4.2.8",
     "fbemitter": "^3.0.0",
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
+    "jquery": "^3.5.1",
     "prop-types": "^15.7.2",
     "react-bootstrap-slider": "^2.2.3",
     "react-datepicker": "^3.4.1",
@@ -46,23 +47,22 @@
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-textarea-autosize": "^7.1.2",
-    "xss": "^1.0.8",
-    "jquery": "^3.5.1"
+    "xss": "^1.0.10"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-json-strings": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
-    "@babel/runtime-corejs2": "^7.12.5",
+    "@babel/runtime-corejs2": "^7.15.4",
     "add": "^2.0.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -71,20 +71,20 @@
     "ejs": "^2.7.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.26.1",
     "express": "^4.17.1",
-    "multer": "^1.4.2",
+    "multer": "^1.4.3",
     "node-sass": "^6.0.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "build": "webpack -p --config webpack.production.config.js",
