--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,14 @@
 {
   "parser": "babel-eslint",
   "extends": ["airbnb-base"],
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "globals": {
     "window": true,
     "document": true,
     "navigator": true
   },
   "rules": {
-    "max-len": [1, 180, 2, {"ignoreComments": true}],
+    "max-len": [1, 180, 2, { "ignoreComments": true }],
     "semi": [2, "always"],
     "comma-dangle": "warn",
     "camelcase": "warn",
@@ -22,11 +20,12 @@
     "class-methods-use-this": "off",
     "arrow-parens": "off",
     "indent": "off",
-    "no-plusplus": "off",   
-    "no-return-assign": "off", 
+    "no-plusplus": "off",
+    "no-return-assign": "off",
     "no-prototype-builtins": "warn",
     "react/jsx-uses-vars": [2],
-    "react/jsx-uses-react": 1
+    "react/jsx-uses-react": 1,
+    "quotes": [2, "always", { "avoidEscape": true }]
   },
   "settings": {
     "import/resolver": {
