--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "immutability-helper": "^3.1.1",
     "isomorphic-fetch": "^3.0.0",
     "prop-types": "^15.7.2",
+    "react-bootstrap-slider": "^2.2.3",
     "react-datepicker": "^3.4.1",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
